analogue Change Log

Version 0.6-6

	* optima, tolerance: New print methods for both functions. Returned 
	objects now have additional attributes.

Version 0.6-5

	* wa: now computes tolerances and can perform tolerance downweighting
	in WA transfer functions. Contains several options to manage working
	tolerances used in the WA computations, including how to deal with
	species that have very small (narrow) tolerances.

	The actual tolerances and working values are returned from wa().

	* optima, tolerance: two new user visible functions to compute weighted
	average optima and tolerance ranges from species abundances and 
	associated environmental data.

Version 0.6-4

	* Datasets: Version 1.7 of the North American Modern Pollen 
	Database has been added to 'analogue'. The data are contained
	in four datasets: Pollen, Biome, Climate and Location, containing
	the pollen counts on 134 taxa, vegetation classification, 32
	climatic variables and location (latitude/longitude) respectively
	on 4833 sampling locations in North America and Greenland.

	* plot.logitreg: adjusted the correction to the degrees of freedom
	in the calculation of the confidence intervals.

	* roc: now returns the observed prior probability that two samples 
	are analogues for each group. Also returns the index of the point 
	along the ROC curve where the slope of the curve is maximal (the 
	point corresponding to the optimal dissimilarity).

	* bayesF: now returns the posterior probabilities as well as 
	posterior odds of true analogue and true non-analogues for points 
	along the ROC curve.

	Documentation of the object returned from 'bayesF' has been updated
	to match the changes introduce in version 0.6-0.

	* wa: documentation for wa did not state that the 'tol.dw' argument
	was currently ignored. Tolerance down weighting is not currently
	implemented in wa and the documentation now states this clearly.
	Reported by Andreas Plank (R-Forge Bug ID 287).
	
Version 0.6-3
